-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 061001) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][devT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.3 *-

06102001 (v2.1.0)
	- edi-entries: edi-2, edi-6, edi-10, edi-15
	- added: more recent config.guess and config.sub to 
	         the dist package  [juekawa]
	- added: new feedback-% param to -etd effect, doesn't
		 affect old presets using -etd [smassy]
	- added: ALSA device name 'default' is used if no 
                 other name is given ('-o:alsa' is equivalent
	         to '-o:alsa,default')
	- added: special case for mapping "ecasound file.ecs"
		 to "ecasound -s:file.ecs"
	- added: implementation of edi-6; the -z:db
		 is now completely transparent to other 
		 parts of ecasound
	- added: eiam - new commands: cs-set-position-samples,
		 cs-get-position-samples, ai-set-position-samples,
		 ai-get-position-samples, ao-set-position-samples,
		 ao-get-position-samples
	- added: edi-15 - '-B' option for selecting default 
		 buffering mode (see ecasound man page)
	- added: edi-15 - ecasoundrc bmode-defaults options; 
		 obsoletes old default-buffersize, etc options
	- added: various improvements to multitrack sync-mechanism 
		 to make it work reliably in all buffering modes
	- added: ladspa.h added back to distribution; it is however
		 not installed to incdir/ecasound/ladspa; also 