@@ -17,10 +17,6 @@
 // Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 // ------------------------------------------------------------------------
 
-#ifdef HAVE_CONFIG_H
-#include <config.h> /* for USE_ATOMIC */
-#endif
-
 #include <iostream>
 
 #include <unistd.h>
