@@ -2,6 +2,11 @@
 *** libkvutils - changes and additions to the public interfaces     ***
 -----------------------------------------------------------------------
 
+2001-10-09  Kai Vehmanen <kai.vehmanen@wakkanet.fi>
+
+	* locks.h (all): made function member of ATOMIC_INTEGER 
+	non-inlined to better hide the actual implementation
+	
 2001-10-03  Kai Vehmanen <kai.vehmanen@wakkanet.fi>
 
 	* dbc.h (DBC_DECLARE): added
